# glacier-camera

./: .gitignore  CMakeLists.txt  glacier-camera.desktop  glacier-camera.pro  main.cpp
qml/: glacier-camera.qml
qml/pages/: CameraPage.qml  PreviewPage.qml  SettingsPage.qml
rpm/: glacier-camera.spec
src/: CMakeLists.txt  camerasettings.cpp  camerasettings.h  main.cpp
src/qml/: glacier-camera.qml  glacier-camera.qrc
src/qml/components/: ClickIcon.qml
src/qml/pages/: CameraPage.qml  PreviewPage.qml  SettingsPage.qml
translations/: glacier-camera.ts  glacier-camera_cs.ts  glacier-camera_de.ts  glacier-camera_fi.ts  glacier-camera_fr.ts  glacier-camera_pl.ts  glacier-camera_ro.ts  glacier-camera_ru.ts  glacier-camera_sk_SK.ts  glacier-camera_uk.ts  glacier-camera_vi.ts
